# miraipp

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: FindSphinx.cmake  miraippConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  docs.rst  index.rst  install.rst  tutorials.rst
docs/api/: bot.rst  message.rst
docs/api/message/: message.rst
docs/custom/: custom.css
docs/tutorials/: message.rst  sync_repeater.rst
examples/: CMakeLists.txt  playground.cpp  sync_repeater.cpp
lib/: CMakeLists.txt
lib/include/mirai/: core.h  event.h  message.h  mirai.h
lib/include/mirai/core/: bot.h  common.h  config_types.h  exceptions.h  export.h  format.h  info_types.h  mirai_exception.h  net_client.h
lib/include/mirai/detail/: ex_utils.h  json.h  json_fwd.h  net_client.h
lib/include/mirai/detail/filter/: filter_queue.h  next_event.h
lib/include/mirai/event/: event.h  event_base.h  event_bases.h  event_types.h  event_types_fwd.h
lib/include/mirai/message/: forwarded_message.h  message.h  segment.h  segment_types.h  segment_types_fwd.h  sent_message.h
lib/include/mirai/pattern/: pattern.h  pattern_awaiter.h  pattern_matcher_queue.h  pattern_types.h
lib/src/core/: bot.cpp  config_types.cpp  exceptions.cpp  info_types.cpp  mirai_exception.cpp  net_client.cpp
lib/src/detail/: json.h  multipart_builder.cpp  multipart_builder.h  net_client.cpp
lib/src/detail/filter/: filter_queue.cpp
lib/src/event/: event.cpp  event_bases.cpp  event_types.cpp
lib/src/message/: forwarded_message.cpp  message.cpp  segment.cpp  segment_types.cpp  sent_message.cpp
lib/src/pattern/: pattern_awaiter.cpp  pattern_matcher_queue.cpp
